enhanced logging for ARC Communication Letters and KFS documents